# PruebasVTK

./: CMakeLists.txt  ChangeVolumePropertiesWidget.h  ChangeVolumePropertiesWidget.ui  HolaMundo_Imagen.cxx  HolaMundo_VTK_ITK.cxx  HolaMundo_VTK_ITK.h  MeshToVTK.cpp  MeshToVTK.h  QVTKImageWidget.cpp  QVTKImageWidget.h  VTKThreeViews.ui  Vtk3dView.cpp  Vtk3dView.h  widget.cpp  widget.h  widget.ui
VTKThreeViews/: VTKThreeViews.cpp  VTKThreeViews.h  VTKThreeViews.pro  VTKThreeViews.ui  main.cpp
untitled/: ChangeVolumePropertiesWidget.cpp  ChangeVolumePropertiesWidget.h  ChangeVolumePropertiesWidget.ui  main.cpp  untitled.pro
